--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f5ff; /* Blueish-white background */
         }
 
         .container {
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #ffffff; /* White container background */
         }
 
         h1,
@@ -73,9 +74,7 @@
 
         <section class="section">
             <h2>About Me</h2>
-            <p>With a solid academic background, specialized training, and certification in AWS Cloud Practitioner, I am eager to contribute to
-innovative projects and grow professionally in the tech industry. Ready to take on new challenges and make meaningful
-contributions to the success of any organization.</p>
+            <p>With a solid academic background, specialized training, and certification in AWS Cloud Practitioner, I am eager to contribute to innovative projects and grow professionally in the tech industry. Ready to take on new challenges and make meaningful contributions to the success of any organization.</p>
         </section>
 
         <section class="section">
@@ -120,7 +119,7 @@ contributions to the success of any organization.</p>
             <p>Email: sharaanbaskar789@gmail.com</p>
             <p>Phone: +91-98434 77292</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/baskar-p-ab6948150/" target="_blank">linkedin.com/in/baskar-p</a></p>
-            <p>GitHub: <a href="https://github.com/baskarp9798" target="_blank">github.com/baskarp9798</a></p>
+            <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/baskarp9798</a></p>
         </div>
         <p>I am open to freelance opportunities and would love to discuss how I can contribute to your projects.</p>
     </div>
